# finite-automata-tools

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: deterministic-fa.hpp  deterministic-finite-automaton.hpp  dfa.hpp  finite-automaton.hpp  lambda-nfa.hpp  nfa-to-dfa-conversion.hpp  nondeterministic-fa.hpp  nondeterministic-finite-automaton.hpp  re-to-lnfa-conversion.hpp
src/: deterministic-fa.cpp  deterministic-finite-automaton.cpp  dfa.cpp  finite-automaton.cpp  lambda-nfa.cpp  nfa-to-dfa-conversion.cpp  nondeterministic-fa.cpp  nondeterministic-finite-automaton.cpp  re-to-lnfa-conversion.cpp
